syntax = "proto3";

package weatherParse;
//  protoc -I . weather.proto --go_out=plugins=grpc:.
service weatherParser {
  rpc ProcessGRPCRequest (WeatherParams) returns (DayWeather) {}
}

message WeatherParams {
  repeated int32 MonthsNumbers = 1;
  repeated string Cities = 2;
  string Site = 3;
  repeated string Months = 4;
  string Year = 5;
  string ReplyFormat = 6;
}

message DayWeather {
  bytes ComparisonCSV = 1;
  string Format = 2;
}
